syntax = "proto3";
import "Common/ProtoSource/Common.proto";
package HS.Protobuf.Combat.Skill;

enum SkillProtocol{
	SKILL_PROTOCOL_NONE = 0;
	SKILL_PROTOCOL_SPELL_CAST_REQ = 41001;			// [SpellCastRequest]
	SKILL_PROTOCOL_SPELL_CAST_RESP = 41002;			// [SpellCastResponse]
	SKILL_PROTOCOL_SPELL_CAST_FAIL_RESP = 41003;	// [SpellCastFailResponse]
}


message FixedSkillInfo{
	int32 pos = 1;
	int32 skillId = 2;
}
message FixedSkillGroupInfo{
	repeated FixedSkillInfo skills = 1;
}

// 技能释放结果
enum CastResult{
	Success 			= 0;	// 成功		
	IsPassive			= 1;	// 被动技能
	MpLack				= 2;	// MP不足
	EntityDead			= 3;	// entity已经死亡
	OutOfRange			= 4;	// 超出范围
	Running				= 5;	// 进行中
	ColdDown			= 6;	// 冷却中
	TargetError			= 7;	// 目标错误	
}
// 施法信息：谁发的，要打谁
message CastInfo{
	int32 casterId = 1;
	int32 skillId = 2;
	int32 targetId = 3;
	HS.Protobuf.Common.NetVector3 point = 4;	// 技能施法点
	CastResult result = 5;						// 技能释放结果
	int64 timestamp = 6;
	HS.Protobuf.Common.NetVector3 casterStartPos = 7;
	HS.Protobuf.Common.NetVector3 casterStartRot = 8;
}
// 释放技能请求
message SpellCastRequest{
	string sessionId = 1;
	CastInfo info = 2;
}
// 释放技能响应，这里用list做优化
message SpellCastResponse{
	string sessionId = 1;
	int32 sceneId = 2;
	int64 timestamp = 3;
	repeated CastInfo list = 4;
}
// 技能释放错误
message SpellCastFailResponse{
	string sessionId = 1;
	int32 sceneId = 2;
	int32 casterId = 3;
	int32 skillId = 4;
	CastResult reason = 5;
}

//伤害类型
enum DameageType{
	UNKNOWN = 0;		//默认值,表示未知或未设置
	PHYSICAL = 1;		
	MAGICAL = 2;
	REAL = 3;			//真伤,不受任何防御属性影响
}
//伤害数据
message Damage{
	int32 attackerId = 1;
	int32 targetId = 2;
	int32 skillId = 3;
	float amount = 4;		//伤害数值
	DameageType damageType = 5;
	bool isCrit = 6;		//是否暴击
	bool isMiss = 7;
	bool isImmune = 8;		//免疫伤害
}
//通知客户端有人收到伤害
message DamageResponse{
	repeated Damage list = 1;
}














// =========================弃用

// 技能信息:skillid
message SkillInfo{
	int32 id = 1;
}

message SpellFailResponse{
	int32 casterId = 1;
	int32 skillId = 2;
	CastResult reason = 3;
}
